<resources>
    <string name="app_name">Paper Chase</string>
    <string name="txtBtnStart">Connect</string>
    <string name="txtBtnCreate">Create game</string>
    <string name="txtBtnInfo">Info</string>
    <string name="txtBtnExit">Exit</string>
    <string name="txtPressExit">Type second time to exit</string>
    <string name="txtLogin">Login</string>
    <string name="txtSearch">Search</string>
    <string name="txtPlay">Play</string>
    <string name="txtConnectDialogPassword">Password</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtCatched">Catched</string>
    <string name="txtGameName">Game Name</string>
    <string name="txtPassword">Password</string>
    <string name="txtSearchTime">Search Time</string>
    <string name="txtHideTime">Hide Time</string>
    <string name="txtSet">Set</string>
    <string name="txtCreatedBy">Created by: BSSW</string>
    <string name="txtLogginOccupied">Login is Occupied</string>
    <string name="txtTimerVal">00:00:00</string>
    <string name="txtPlayerName">Player Name</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtOk">Ok</string>
    <string name="txtToFind">To Find:</string>
    <string name="txtSearcher">Searcher</string>
    <string name="txtToCatch">To Catch</string>
    <string name="txtStart">Start</string>
    <string name="txtNoPasswordTyped">No password typed</string>
    <string name="txtWrongPassword">Wrong password</string>
    <string name="txtNoLoginTyped">No Login typed</string>
    <string name="txtLoginOccupied">Login occupied</string>
    <string name="txtLoginSet">Login set</string>
    <string name="txtNoGameSelected">No game selected</string>
    <string name="txtGameStatus">Game status</string>
    <string name="txtPlayersCount">Players count</string>
    <string name="txtNoGameNameTyped">No game name typed</string>
    <string name="txtNoGameNameExists">Game Name already exists</string>
    <string name="txtCreateGame">Create game</string>
    <string name="txtEndOfTime">End of time</string>
    <string name="txtDoYouReallyWantToQuit">Do You really want to quit</string>
    <string name="txtHiding">Hiding</string>
    <string name="txtSearching">Searching</string>
    <string name="txtWaiting">Waiting</string>
    <string name="txtError">Error</string>
    <string name="txtPlayNewGame">Play new game</string>
    <string name="txtSetLocation">Set Location</string>
    <string name="txtNewLocation">New Location</string>
    <string name="txtStartSearching">Start searching</string>
    <string name="txtChoose">Choose</string>
    <string name="txtChoosePlayerToFind">Choose player to find</string>
    <string name="txtInfoHeader">Informations about game</string>
    <string name="txtInfoLine1">Choose Create Game for create a game and be a searcher</string>
    <string name="txtInfoLine2">Choose Connect to connect to a game and get hide</string>
    <string name="txtInfoLine3">Game Created By:</string>
</resources>
