<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.markus_swierzy.chowanego.Create"
    android:columnCount="3"
    android:rowCount="6">
    <Button
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:text="@string/txtSet"
        android:id="@+id/btnCreateGameName"
        android:gravity="center"/>
    <EditText
        android:layout_row="0"
        android:layout_column="2"
        android:hint="@string/txtGameName"
        android:gravity="center"
        android:id="@+id/edCreateGameName"/>
    <Button
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/txtSet"
        android:id="@+id/btnCreatePassword"
        android:gravity="center"/>
    <EditText
        android:layout_row="1"
        android:layout_column="2"
        android:hint="@string/txtPassword"
        android:gravity="center"
        android:id="@+id/edCreatePassword"/>
    <Button
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/txtSet"
        android:id="@+id/btnCreateLogin"
        android:gravity="center"/>
    <EditText
        android:layout_row="2"
        android:layout_column="2"
        android:hint="@string/txtLogin"
        android:gravity="center"
        android:id="@+id/edCreateLogin"/>
    <Button
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/txtSet"
        android:id="@+id/btnCreateSearchTime"
        android:gravity="center"/>
    <EditText
        android:layout_row="3"
        android:layout_column="2"
        android:hint="@string/txtSearchTime"
        android:gravity="center"
        android:id="@+id/edCreateSearchTime"/>
    <Button
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/txtSet"
        android:id="@+id/btnCreateHideTime"
        android:gravity="center"/>
    <EditText
        android:layout_row="4"
        android:layout_column="2"
        android:hint="@string/txtHideTime"
        android:gravity="center"
        android:id="@+id/edCreateHideTime"/>
    <Button
        android:layout_width="match_parent"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:text="@string/txtBtnCreate"
        android:id="@+id/btnCreate"
        android:gravity="center"/>
</GridLayout>
