<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.markus_swierzy.chowanego.Create">
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtSet"
                android:id="@+id/btnCreateGameName"
                android:gravity="center"/>
            <EditText
                android:hint="@string/txtGameName"
                android:gravity="center"
                android:id="@+id/edCreateGameName"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtSet"
                android:id="@+id/btnCreatePassword"
                android:gravity="center"/>
            <EditText
                android:hint="@string/txtPassword"
                android:gravity="center"
                android:id="@+id/edCreatePassword"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtSet"
                android:id="@+id/btnCreateLogin"
                android:gravity="center"/>
            <EditText
                android:hint="@string/txtLogin"
                android:gravity="center"
                android:id="@+id/edCreateLogin"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtSet"
                android:id="@+id/btnCreateSearchTime"
                android:gravity="center"/>
            <EditText
                android:hint="@string/txtSearchTime"
                android:gravity="center"
                android:id="@+id/edCreateSearchTime"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtSet"
                android:id="@+id/btnCreateHideTime"
                android:gravity="center"/>
            <EditText
                android:hint="@string/txtHideTime"
                android:gravity="center"
                android:id="@+id/edCreateHideTime"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="center">
        <TableRow
            android:gravity="center">
            <Button
                android:text="@string/txtBtnCreate"
                android:id="@+id/btnCreate"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
</TableLayout>
