<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.markus_swierzy.chowanego.Game"
    android:columnCount="1"
    android:rowCount="4">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:columnCount="3"
        android:rowCount="1">
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/tvHideTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/txtTimerVal"
            android:layout_gravity="left"/>

        <TextView
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/txtGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHideName"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/txtPlayerName"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHideLogin"
            android:layout_gravity="right"/>

    </GridLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="2">
        <Button
            android:id="@+id/btnHideSetLocation"
            android:text="@string/txtSetLocation"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="3">
        <Button
            android:id="@+id/btnHideQuit"
            android:text="@string/txtBtnExit"/>
    </TableLayout>
</GridLayout>
