<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.markus_swierzy.chowanego.Game"
    android:columnCount="1"
    android:rowCount="4">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:columnCount="1"
        android:rowCount="4">
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/txtGameName"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/txtGameName"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGameName"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/txtPlayerName"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/txtPlayerName"
            android:layout_column="0"
            android:layout_row="3"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGameLogin"
            android:layout_gravity="center"/>

    </GridLayout>
    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/tvGameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:text="@string/txtTimerVal"
        android:layout_gravity="center"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="2">
        <Button
            android:id="@+id/btnGameCatched"
            android:text="@string/txtCatched"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="3">
        <Button
            android:id="@+id/btnGameQuit"
            android:text="@string/txtBtnExit"/>
    </TableLayout>
</GridLayout>
