<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:columnCount="3"
        android:rowCount="1">
        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/tvWaitingTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/txtTimerVal"
            android:layout_gravity="left"/>
    </GridLayout>
    <TableRow>
        <TextView
            android:text="@string/txtGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_gravity="start"/>
        <TextView
            android:text="@string/txtGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:id="@+id/tvWaitingGameName"
            android:layout_gravity="left"
            android:gravity="left"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtSearcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_gravity="start"/>
        <TextView
            android:text="@string/txtSearcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:id="@+id/tvWaitingSearcher"
            android:layout_gravity="left"
            android:gravity="left"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/txtCatched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_gravity="start"
            android:gravity="start"/>
        <TextView
            android:text="@string/txtToCatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_gravity="left"
            android:gravity="left"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <ListView
                android:layout_height="300sp"
                android:layout_gravity="start"
                android:gravity="start"
                android:id="@+id/lvWaitingCatched"
                android:layout_width="match_parent"
                android:layout_weight=".50"
                android:background="@color/lightGray">
            </ListView>
            <ListView
                android:layout_height="300sp"
                android:layout_width="match_parent"
                android:layout_weight=".50"
                android:layout_gravity="end"
                android:gravity="end"
                android:id="@+id/lvWaitingToCatch"
                android:background="@color/lightGray">
            </ListView>
    </TableRow>

    <Button
        android:id="@+id/btnWaitingQuit"
        android:text="@string/txtBtnExit"/>
</TableLayout>