<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtConnectDialogPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/txtConnectDialogPassword"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="fill_parent" >
                <Button
                    android:text="@string/txtCancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:id="@+id/btnConnectDialogCancel" />
                <Button
                    android:text="@string/txtPlay"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:id="@+id/btnConnectDialogPlay" />
        </LinearLayout>


</TableLayout>