<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableLayout>
        <TableRow>
            <TextView
                android:text="@string/txtSearcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:layout_gravity="start"/>
            <TextView
                android:text="@string/txtSearcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:id="@+id/tvWaitingDialogNewGameSearcher"
                android:layout_gravity="left"
                android:gravity="left"/>
        </TableRow>
        <TableRow>
            <Button
                android:text="@string/txtStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnWaitingDialogNewGameStart" />
            <Button
                android:text="@string/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnWaitingDialogNewGameCancel" />
        </TableRow>
    </TableLayout>
</TableLayout>