<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.markus_swierzy.chowanego.MainActivity">
    <TableLayout>
        <TableRow>
            <Button
                android:text="@string/txtLogin"
                android:id="@+id/btnConnectLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Login"
                android:ems="10"
                android:id="@+id/edConnectLogin" />
        </TableRow>
    </TableLayout>
    <TableLayout>
        <TableRow>
            <Button
                android:text="@string/txtSearch"
                android:id="@+id/btnConnectSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Game"
                android:ems="10"
                android:id="@+id/edConnectSearch" />
        </TableRow>
    </TableLayout>
    <Button
        android:text="@string/txtPlay"
        android:id="@+id/btnConnectPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
    <LinearLayout android:weightSum="1">
        <ListView
            android:layout_height="300sp"
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_weight="1">
        </ListView>
    </LinearLayout>
</TableLayout>